@@ -1,0 +1,4 @@
+﻿NUMMER_FLORA;NAME;VOLKSNAME_DE;VOLKSNAME_FR
+2307;Crepis aurea (L.) Cass.;Gold-Pippau;Crépide orangée
+2325;Crepis biennis L.;Wiesen-Pippau;Crépide bisannuelle
+2320;Crepis capillaris Wallr.;Kleinköpfiger Pippau;Crépide capillaire
